# agent-loop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: agent-loop.yml  pr-ci-repair-merge.yml
docs/: ai-decision-log.md  knowledge-asset-design.md  non-functional-requirements-ja.md  pr-human-review-ja.md
examples/: semantic-updates.json
hermes_cli/: agent_loop_capture.py  agent_loop_controller.py  agent_loop_decision_log.py  agent_loop_evaluator.py  agent_loop_knowledge.py  agent_loop_ledger_update.py  agent_loop_pr_ci_loop.py  agent_loop_pr_guard.py  agent_loop_regression.py
scripts/: agent_loop_controller.py  evaluate_agent_loop.py  knowledge_record.py  ledger_decision.py  ledger_git_snapshot.py  ledger_init.py  ledger_pr_snapshot.py  ledger_repair.py  ledger_run.py  ledger_update.py  pr_ci_repair_merge.py  pr_merge_guard.py  regression_diff.py  setup.sh
skills/autonomous-ai-agents/opencode/: SKILL.md
skills/autonomous-ai-agents/opencode/references/: install-auth-notes.md
skills/github/github-pr-workflow/: SKILL.md
skills/github/github-pr-workflow/references/: accidental-commit-cleanup.md  autonomous-issue-impl.md  ci-failure-patterns.md  ci-troubleshooting.md  deferred-follow-ups.md  development-git-rules.md  feature-branch-hygiene.md  github-auth.md  github-code-review.md  github-issues.md  local-dev-server-testing.md  test-write.md  (+1 more)
skills/software-development/agent-loop-evaluation/: SKILL.md
skills/software-development/development-git-workflow/: SKILL.md
skills/software-development/subagent-code-generation/: SKILL.md
skills/software-development/subagent-driven-development/: SKILL.md
skills/software-development/systematic-debugging/: SKILL.md
skills/software-development/test-driven-development/: SKILL.md
templates/: evidence-ledger.json  knowledge-entry.md  pr-body-human-review-ja.md
tests/cli/: test_agent_loop_capture.py  test_agent_loop_controller.py  test_agent_loop_decision_log.py  test_agent_loop_evaluator.py  test_agent_loop_knowledge.py  test_agent_loop_ledger_update.py  test_agent_loop_pr_ci_loop.py  test_agent_loop_pr_guard.py
(+10 files in other folders)
